design change to dark purple theme

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page</title>
         <link rel="stylesheet" href="/style.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.4/lottie.min.js"></script>
     </head>
     <body>
         <div class="page">
@@ -25,8 +26,11 @@
                 <div class="page-break"></div>
                 {% include 'pricing.njk' %}
                 <div class="page-break"></div>
-                {% include 'footer.njk' %}
+                {% include 'faqs.njk' %}
                 <div class="page-break"></div>
+                {% include 'contact.njk' %}
+                <div class="page-break"></div>
+                {% include 'footer.njk' %}
             </div>
         </div>
     </body>
