--- a/public/style.css
+++ b/public/style.css
@@ -5,15 +5,23 @@
     src: url('/assets/fonts/Archive Regular.ttf') format('truetype');
 }
 
+@font-face {
+    font-family: 'Coolvetica';
+    src: url('/assets/fonts/coolvetica-rg.ttf') format('truetype');
+}
+
 :root {
     --primary: #CD5465;
-    --secondary: #FECF80;
+    --secondary: #6440ca;
     --off-grey: #E6E4CF;
     --off-white: #F4F2E6;
+    --grey: #B0B0B0;
+    --dark-grey: #292929;
+    --light-black: #1e1e1e;
 
     --heading: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     --text: sans-serif;
-    --special: 'Archive-font';
+    --special: 'Coolvetica';
 
 }
 
@@ -26,7 +34,7 @@
 
 
 body {
-    background-color: var(--off-white);
+    background-color: #333333;
     font-family: var(--text);
 
 }
@@ -52,7 +60,20 @@ body {
 /*
 Hero
 */
-.hero {
+.hero-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-image: url('/assets/dark-bg.png');
+    background-size: cover;
+    background-position: center;
+    z-index: -1; /* Places the background behind the content */
+}
+
+.hero-container {
     min-height: 60vh;
     display: flex;
     align-items: center;
@@ -61,12 +82,13 @@ Hero
     text-align: center;
     padding: 3rem 0;
     margin: 1rem 0;
-    background-image: url('/assets/dots-bg.png');
+    background-image: url('/assets/white-dots.png');
     background-size: contain;
     background-position: center;
     width: 100%;
-    background-color: #FFFAC8;
-    border: 4px solid #000
+    background-color: var(--dark-grey);
+    border: 2px solid #fff;
+    border-radius: 18px;
 }
 
 .hero-logo {
@@ -104,6 +126,88 @@ Hero
 :hover.yellow-btn {
     transform: scale(1.1);
 }
+
+/*
+Below Fold
+*/
+.fold {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    gap: 1rem;
+}
+
+.fold-grid-cell h2 {
+    text-align: right;
+    font-family: var(--special);
+    font-size: 2rem;
+    color: #000;
+    letter-spacing: 1.1px;
+    text-transform: uppercase;
+    width: fit-content;
+    text-wrap: nowrap;
+}
+
+.fold-grid-cell {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    gap: 1rem;
+    height: 100%;
+    width: fit-content;
+    justify-content: center;
+    background-color: var(--grey);
+    border-radius: 12px;
+    border: #000 solid 2px;
+}
+
+.fold-links {
+    flex: 1;
+}
+
+.two-col-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    gap: 1rem;
+    justify-items: center;
+}
+
+@media (max-width: 768px) {
+    .fold-grid-cell h2 {
+        font-size: 1.5rem;
+    }
+
+    .fold-grid-cell {
+        padding: 1rem;
+    }
+
+    .fold-grid-cell img {
+        height: 90px;
+        width: 90px;
+    }
+}
+
+@media (max-width: 512px) {
+    .fold {
+        flex-direction: column;
+
+    }
+
+    .latest-badge {
+        order: 3;
+    }
+
+    .fold-grid-cell h2 {
+        font-size: 1rem;
+    }
+
+    .fold-grid-cell img {
+        height: 60px;
+        width: 60px;
+    }
+
+}
+
 
 /*
 Trusted By
@@ -150,14 +254,15 @@ Overview
 }
 
 .overview p {
-    padding: .5rem 0;
+    padding: .5rem 1rem;
+
 }
 
 .overview-title {
     width: fit-content;
     box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
     padding: .25rem 1rem;
-    background: rgba(0, 0, 0, 0.1);
+    background: var(--secondary);
     border: #000 solid 4px;
     font-family: var(--special);
 }
@@ -284,93 +389,74 @@ Snapshot
 Navbar
 */
 .navbar {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: .25rem .5rem .25rem .5rem;
-    background-color: var(--primary);
-    color: white;
-    border: 4px solid #000;
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-    max-width: 80rem;
+    background-color: #333;
+    height: 60px;
+    z-index: 1000;
 }
 
-.logo {
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.navbar-links {
+.nav-links {
+    list-style: none;
     display: flex;
-    column-gap: 2rem;
+    gap: 20px;
 }
 
-.nav-item {
-    cursor: pointer;
+.nav-links li {
+    margin: 0;
+}
+
+.nav-links a {
+    text-decoration: none;
     color: white;
-    text-align: center;
-    font-family: var(--special);
-    font-size: 1.2rem;
-    font-weight: 600;
-
-
+    font-size: 18px;
 }
 
-.nav-item:hover {
-    background-color: #575757;
-}
-
-.menu-icon {
+.hamburger {
     display: none;
-    font-size: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
     cursor: pointer;
 }
 
-#menu-toggle {
-    display: none;
+.hamburger span {
+    display: block;
+    height: 3px;
+    background: white;
+    border-radius: 2px;
 }
 
-
-/* Breakpoint at 768px */
-@media (max-width: 768px) {
-
-    .coffee-1 {
-
-        width: 12rem;
-        top: -10rem;
-        left: 12rem;
-    }
-
-
-    /* Responsive Navbar */
+@media screen and (max-width: 600px) {
     .navbar {
-        flex-wrap: wrap;
+        justify-content: flex-start;
+        padding-left: 20px;
     }
 
-    .menu-icon {
-        display: block;
-    }
-
-    .navbar-links {
-        display: none;
-        width: 100%;
+    .nav-links {
+        position: absolute;
+        bottom: 60px; /* Moves the menu above the navbar */
+        left: 20px;
+        background-color: #333;
         flex-direction: column;
-        align-items: center;
+        gap: 10px;
+        display: none;
+        border-radius: 5px;
+        padding: 10px;
     }
 
-    #menu-toggle:checked+.menu-icon+.navbar-links {
+    .nav-links.active {
         display: flex;
     }
 
-    .nav-item {
-        width: 100%;
-        padding: 15px;
-        background-color: #444;
-        border-bottom: 1px solid #555;
-    }
-
-    .nav-item:last-child {
-        border-bottom: none;
+    .hamburger {
+        display: flex;
     }
 }
 
@@ -378,55 +464,6 @@ Navbar
 
 
 
-
-/* Breakpoint at 672px */
-@media (max-width: 672px) {}
-
-
-/* Breakpoint at 320px */
-@media (max-width: 320px) {}
-
-/*
-Below Fold
-*/
-.fold {
-    display: flex;
-    align-items: center;
-}
-
-.fold-grid-cell h2 {
-    text-align: right;
-    font-family: 'Archive-font';
-    font-size: 2rem;
-}
-
-.fold-grid-cell {
-    display: flex;
-    align-items: center;
-    padding: 2rem;
-    gap: 1rem;
-    height: 100%;
-    justify-content: center;
-}
-
-.fold-links {
-    flex: 1;
-}
-
-.two-col-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-}
-
-@media (max-width: 768px) {
-    .fold-grid-cell h2 {
-        font-size: 1.5rem;
-    }
-
-    .fold-grid-cell {
-        padding: 1rem;
-    }
-}
 
 /*
 Service Philosophy
@@ -703,8 +740,8 @@ Pricing Section
 
 /* Footer Styles */
 .footer {
-    background-color: #2c3e50;
-    color: #fff;
+    background-color: var(--off-grey);
+    color: #000;
     padding: 40px 0;
 }
 
@@ -741,7 +778,7 @@ Pricing Section
 }
 
 .footer-section ul li a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
     transition: color 0.3s ease;
 }
@@ -775,4 +812,118 @@ Pricing Section
 
 .footer-bottom p {
     margin: 0;
+}
+
+
+/*
+    Contact Section
+*/
+.content {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.contact-form {
+    width: 50%;
+}
+
+.contact-form h2 {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.contact-form label {
+    font-size: 14px;
+    margin-bottom: 8px;
+    text-align: left;
+    width: 100%;
+}
+
+.contact-form input,
+.contact-form textarea {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #e3e3e3;
+}
+
+.contact-form textarea {
+    height: 150px;
+    resize: none;
+}
+
+.contact-form button {
+    padding: 10px 20px;
+    font-size: 14px;
+    background-color: #ccc;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.divider {
+    width: 1px;
+    background-color: black;
+    height: auto;
+    margin: 0 20px;
+}
+
+.contact-options {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 40%;
+}
+
+.contact-options .option {
+    background-color: #1a1a1a;
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: left;
+}
+
+.contact-options .option h3 {
+    font-size: 16px;
+    margin: 0 0 10px;
+}
+
+.contact-options .option p {
+    font-size: 14px;
+    margin: 0;
+}
+
+.lottie-container {
+    width: 150px;
+    height: 150px;
+    margin: 20px auto;
+}
+
+@media screen and (max-width: 800px) {
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contact-form, .contact-options {
+        width: 100%;
+    }
+
+    .divider {
+        display: none;
+    }
+
+    .contact-options {
+        margin-top: 20px;
+    }
 }
