--- a/public/style.css
+++ b/public/style.css
@@ -141,7 +141,7 @@ Below Fold
     text-align: right;
     font-family: var(--special);
     font-size: 2rem;
-    color: #000;
+    color: #fff;
     letter-spacing: 1.1px;
     text-transform: uppercase;
     width: fit-content;
@@ -151,14 +151,15 @@ Below Fold
 .fold-grid-cell {
     display: flex;
     align-items: center;
-    padding: 1rem;
+    padding: .5rem;
     gap: 1rem;
     height: 100%;
     width: fit-content;
     justify-content: center;
-    background-color: var(--grey);
+    background-color: var(--light-black);
     border-radius: 12px;
-    border: #000 solid 2px;
+    border: #000 solid 4px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .fold-links {
