--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -12,9 +12,10 @@
             <div class="page-content">
                 {% include 'navbar.njk' %}
                 {% include 'hero.njk' %}
-                {% include 'below-fold.njk' %}
                 <div class="page-break"></div>
                 {% include 'overview.njk' %}
+                <div class="page-break"></div>
+                {% include 'benefits.njk' %}
                 <div class="page-break"></div>
                 {% include 'snapshot.njk' %}
                 <div class="page-break"></div>
