--- a/src/_includes/snapshot.njk
+++ b/src/_includes/snapshot.njk
@@ -1,22 +1,19 @@
+ 
+ <div class="overview">
  <section class="header-snapshot">
-        <div class="tag">Website Development</div>
         <h1>If you can think it, <br> I can build it.</h1>
-        <p>You get high-quality work backed by unlimited edits.</p>
     </section>
 
     <section class="services-snapshot">
         <div class="service-box">
-            <img src="/assets/svg/new-svg.svg" alt="New Icon">
             <h2>New Sites.</h2>
             <p class="p-center">Build Webflow pages or sites from your designs on Figma and more.</p>
         </div>
         <div class="service-box">
-            <img src="/assets/svg/convert-svg.svg" alt="Convert Icon">
             <h2>Convert.</h2>
             <p class="p-center">Get your existing site on Webflow. Go from Static to Dynamic.</p>
         </div>
         <div class="service-box">
-            <img src="/assets/svg/emulate-svg.svg" alt="Emulate Icon">
             <h2>Emulate.</h2>
             <p class="p-center">Get that template you like built in Webflow.</p>
         </div>
@@ -28,3 +25,4 @@
             <p>Get exactly what you want, not close enough.</p>
         </div>
     </section>
+    </div>
