--- a/src/_includes/snapshot.njk
+++ b/src/_includes/snapshot.njk
@@ -4,7 +4,7 @@
         <h1>If you can think it, <br> I can build it.</h1>
     </section>
 
-    <section class="services-snapshot">
+    <div class="services-snapshot">
         <div class="service-box">
             <h2>New Sites.</h2>
             <p class="p-center">Build Webflow pages or sites from your designs on Figma and more.</p>
@@ -17,7 +17,7 @@
             <h2>Emulate.</h2>
             <p class="p-center">Get that template you like built in Webflow.</p>
         </div>
-    </section>
+    </div>
 
     <section class="revisions-section">
         <div class="revisions-banner">
