--- a/public/style.css
+++ b/public/style.css
@@ -126,6 +126,7 @@ Hero
     cursor: pointer;
     font-family: var(--heading);
     text-transform: uppercase;
+    color: #000;
 }
 
 :hover.yellow-btn {
@@ -520,20 +521,22 @@ Service Philosophy
     display: flex;
     align-items: center;
     gap: 1rem;
-    justify-content: center;
+    justify-items: center;
+
+    
 }
 
 .icon-header h2 {
     font-family: var(--special);
     font-size: 3.5rem;
     line-height: 3.5rem;
+    text-align: center;
+    color: #000;
+    background-color: var(--secondary);
+    width: fit-content;
 }
 
-.service-philosophy {
-    background-color: var(--off-grey);
-    border: #000 solid 4px;
-    padding: 1rem;
-}
+
 
 .service-philosophy p {
     padding: 1rem;
