--- a/src/_includes/features.njk
+++ b/src/_includes/features.njk
@@ -1,4 +1,4 @@
-<div class="features-section">
+<section class="features-section">
     <h2>Features</h2>
     <div class="features-grid">
         <div class="feature-grid-cell red-cell" >
@@ -32,4 +32,4 @@
             <p>Easily manage, update, and organize your content with a user-friendly CMS.</p>
         </div>
     </div>
-</div>
+</section>
