--- a/public/style.css
+++ b/public/style.css
@@ -517,6 +517,35 @@ Navbar
 /*
 Service Philosophy
 */
+.content-container {
+    background-color: var(--light-black);
+    padding: 3rem 1rem;
+    border: #000 4px solid;
+    border-radius: 33px;
+    box-shadow: 2px 2px 2px rgba(100, 64, 202, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.page-title {
+    font-size: 2rem;
+    line-height: 3rem;
+    font-family: var(--special);
+    
+    text-transform: uppercase;
+    letter-spacing: 1.1px;
+    background-color: var(--secondary);
+    color: #000;
+    padding: 1rem;
+    border: #000 solid 4px;
+    
+    
+}
+
+
 .icon-header {
     display: flex;
     align-items: center;
