--- a/src/_includes/contact.njk
+++ b/src/_includes/contact.njk
@@ -1,5 +1,8 @@
     <section class="container">
+        <div class="overview">
+            <div class="section-title">
         <h1>LETS DISCUSS YOUR NEXT SITE</h1>
+        </div>
 
         <div class="content">
             <!-- Contact Form -->
@@ -43,5 +46,6 @@
                     <p>Book a Call</p>
                 </div>
             </div>
+        </div>
         </div>
     </section>
