--- a/src/_includes/faqs.njk
+++ b/src/_includes/faqs.njk
@@ -1,4 +1,8 @@
+<section class="faq-section">
+    <div class="overview">
+        <div class="section-title">
 <h2>FAQs</h2>
+</div>
 <div class="faq-container">
     <div class="faq-item">
         <input type="checkbox" id="faq5">
@@ -55,3 +59,5 @@
                         </div>
                     </div>
                 </div>
+                </div>
+                </section>
