--- a/src/_includes/how-it-works.njk
+++ b/src/_includes/how-it-works.njk
@@ -1,5 +1,8 @@
-<div class="how-it-works-section">
+<section class="how-it-works-section">
+    <div class="overview">
+        <div class="section-title">
     <h2>How it works</h2>
+    </div>
     <div class="how-grid">
         <div class="how-grid-cell">
             <div class="faq-container">
@@ -70,4 +73,5 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                        </div>
+                                    </section>
