--- a/src/_includes/pricing.njk
+++ b/src/_includes/pricing.njk
@@ -1,4 +1,5 @@
-<div class="price-section">
+<section class="price-section">
+    <div class="overview">
     <div class="price-grid">
         <div class="package-cell">
             <div class="price-title">Classic Website Package</div>
@@ -72,5 +73,6 @@
                                 <div class="price-questions">
                                     Still Have Questions?
                                 </div>
-                            </div>
+                                </div>
+                            </section>
                             
