--- a/src/_includes/features.njk
+++ b/src/_includes/features.njk
@@ -1,35 +1,39 @@
 <section class="features-section">
-    <h2>Features</h2>
-    <div class="features-grid">
-        <div class="feature-grid-cell red-cell" >
-            <img src="/assets/svg/fast-svg.svg" alt="Fast Delivery Icon">
-            <h3>Fast<br>Delivery</h3>
-            <p>Receive your custom website in as little as 7 days.</p>
+    <div class="overview">
+        <div class="section-title">
+            <h2>Features</h2>
         </div>
-        <div class="feature-grid-cell yellow-cell">
-            <img src="/assets/svg/revision-svg.svg" alt="Revision Icon">
-            <h3>Unlimted<br>Revisions</h3>
-            <p>I'll refine your design until it's exactly what you envisioned.</p>
-        </div>
-        <div class="feature-grid-cell red-cell">
-            <img src="/assets/svg/your-svg.svg" alt="Ownership Icon">
-            <h3>Unique and<br>Yours</h3>
-            <p>Every site is tailor-made and fully owned by you.</p>
-        </div>
-        <div class="feature-grid-cell yellow-cell">
-            <img src="/assets/svg/design-svg.svg" alt="Design Icon">
-            <h3>Responsive<br>Design</h3>
-            <p>Websites that look good on all devices—whether desktop, tablet, or mobile.</p>
-        </div>
-        <div class="feature-grid-cell red-cell">
-            <img src="/assets/svg/email-svg.svg" alt="Emal Collection Icon">
-            <h3>Email<br>Collection</h3>
-            <p>Effortlessly gather and organize your email signups.</p>
-        </div>
-        <div class="feature-grid-cell yellow-cell">
-            <img src="/assets/svg/content-svg.svg" alt="CMS Icon">
-            <h3>Easy Content<br>Management</h3>
-            <p>Easily manage, update, and organize your content with a user-friendly CMS.</p>
+        <div class="features-grid">
+            <div class="feature-grid-cell">
+                <img src="/assets/svg/fast-svg.svg" alt="Fast Delivery Icon">
+                <h3>Fast<br>Delivery</h3>
+                <p>Receive your custom website in as little as 7 days.</p>
+            </div>
+            <div class="feature-grid-cell yellow-cell">
+                <img src="/assets/svg/revision-svg.svg" alt="Revision Icon">
+                <h3>Unlimted<br>Revisions</h3>
+                <p>I'll refine your design until it's exactly what you envisioned.</p>
+            </div>
+            <div class="feature-grid-cell red-cell">
+                <img src="/assets/svg/your-svg.svg" alt="Ownership Icon">
+                <h3>Unique and<br>Yours</h3>
+                <p>Every site is tailor-made and fully owned by you.</p>
+            </div>
+            <div class="feature-grid-cell yellow-cell">
+                <img src="/assets/svg/design-svg.svg" alt="Design Icon">
+                <h3>Responsive<br>Design</h3>
+                <p>Websites that look good on all devices—whether desktop, tablet, or mobile.</p>
+            </div>
+            <div class="feature-grid-cell red-cell">
+                <img src="/assets/svg/email-svg.svg" alt="Emal Collection Icon">
+                <h3>Email<br>Collection</h3>
+                <p>Effortlessly gather and organize your email signups.</p>
+            </div>
+            <div class="feature-grid-cell yellow-cell">
+                <img src="/assets/svg/content-svg.svg" alt="CMS Icon">
+                <h3>Easy Content<br>Management</h3>
+                <p>Easily manage, update, and organize your content with a user-friendly CMS.</p>
+            </div>
         </div>
     </div>
 </section>
