--- a/src/_includes/overview.njk
+++ b/src/_includes/overview.njk
@@ -1,10 +1,12 @@
-<div class="overview">
-    <div class="section-title">Why you should choose Curtis Brighton?
+<section id="overview" class="overview">
+    <div class="content-background">
+        <div class="section-title">Why you should choose Curtis Brighton?
+        </div>
+        <p>
+            My service is designed to offer a streamlined, efficient, and cost-effective solution for individuals, startups, and
+            small businesses looking to establish a strong online presence. With a focus on functionality, aesthetics, and rapid
+            delivery, this package lays the foundation for a professional and responsive website that not only attracts visitors but
+            also effectively communicates your brand message.
+        </p>
     </div>
-    <p>
-        My service is designed to offer a streamlined, efficient, and cost-effective solution for individuals, startups, and
-        small businesses looking to establish a strong online presence. With a focus on functionality, aesthetics, and rapid
-        delivery, this package lays the foundation for a professional and responsive website that not only attracts visitors but
-        also effectively communicates your brand message.
-    </p>
-</div>
+</section>
