--- a/src/_includes/navbar.njk
+++ b/src/_includes/navbar.njk
@@ -1,7 +1,7 @@
     <nav class="navbar">
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="#overview">Overview</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
