--- a/src/style.css
+++ b/src/style.css
@@ -25,14 +25,14 @@
 
 }
 
-/* General Reset */
+/* Reset */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-
+/* General Styles */
 body {
     background-color: #333333;
     font-family: var(--text);
@@ -58,9 +58,6 @@ body {
 
 }
 
-.red-text {
-    color: var(--primary);
-}
 
 /*
 Hero
@@ -247,9 +244,9 @@ Trusted By
 }
 
 /*
-Overview
+    Core Styles
 */
-.overview {
+.content-background {
     background-color: var(--light-black);
     padding: 3rem 1rem;
     border: #000 4px solid;
@@ -259,6 +256,21 @@ Overview
     flex-direction: column;
     align-items: center;
     width: 100%;
+}
+
+.text-background {
+    background-color: var(--light-black);
+    padding: 1rem;
+    border: #000 4px solid;
+    border-radius: 12px;
+    box-shadow: 2px 2px 2px rgba(100, 64, 202, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 1rem;
+    min-height: 8rem;
 }
 
 .section-title {
@@ -271,6 +283,20 @@ Overview
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
     padding: .2rem 1rem;
     color: #000;
+    text-align: center;
+}
+
+.sub-title {
+    width: fit-content;
+    box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
+    padding: .25rem 1rem;
+    background: var(--secondary);
+    border: #000 solid 4px;
+    font-family: var(--special);
+    font-size: 2rem;
+    border-radius: 12px;
+    width: fit-content;
+    text-wrap: nowrap;
 }
 
 
@@ -286,14 +312,7 @@ Overview
 
 }
 
-.overview-title {
-    width: fit-content;
-    box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.5);
-    padding: .25rem 1rem;
-    background: var(--secondary);
-    border: #000 solid 4px;
-    font-family: var(--special);
-}
+
 
 
 .overview-grid-cell {
@@ -301,16 +320,18 @@ Overview
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding: 1rem;
 }
 
-.overview-grid {
+.grid-four-col {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
     grid-template-rows: auto;
     padding: 1rem 0;
+    gap: 1rem;
 }
 
-.overview-grid-cell img {
+.grid-four-col img {
     padding: .5rem;
 }
 
