--- a/src/_includes/benefits.njk
+++ b/src/_includes/benefits.njk
@@ -1,29 +1,30 @@
 <section id="benefits" class="benefits">
-<div class="text-banner">
-    Take control of your site!
-</div>
-<div class="grid-four-col">
-    <div class="overview-grid-cell">
-        <div id="lottie-animation1" class="lottie-container"></div>
-        <div class="sub-title">Affordable Hosting</div>
-        <p class="text-background">Choose from our reliable and secure hosting plans to keep your website up and running smoothly.</p>
+    <div class="text-banner">
+        Take control of your site!
     </div>
-    <div class="overview-grid-cell">
-        <div id="lottie-animation4" class="lottie-container"></div>
-        <div class="sub-title">Custom Websites</div>
-        <p class="text-background">Stand out with a unique, professionally designed website that reflects your brand identity.</p>
+    <div class="grid-four-col">
+        <div class="overview-grid-cell">
+            <div id="lottie-animation1" class="lottie-container"></div>
+            <div class="sub-title">Affordable Hosting</div>
+            <p class="text-background">Choose from our reliable and secure hosting plans to keep your website up and running
+                smoothly.</p>
+        </div>
+        <div class="overview-grid-cell">
+            <div id="lottie-animation4" class="lottie-container"></div>
+            <div class="sub-title">Custom Websites</div>
+            <p class="text-background">Stand out with a unique, professionally designed website that reflects your brand identity.</p>
+        </div>
+        <div class="overview-grid-cell">
+            <div id="lottie-animation3" class="lottie-container"></div>
+            <div class="sub-title">Full Ownership</div>
+            <p class="text-background">Enjoy complete ownership of your website's source code and design.</p>
+        </div>
+        <div class="overview-grid-cell">
+            <div id="lottie-animation2" class="lottie-container"></div>
+            <div class="sub-title">Easy-to-Use CMS</div>
+            <p class="text-background">Manage your content effortlessly with our user-friendly content management system.</p>
+        </div>
     </div>
-    <div class="overview-grid-cell">
-        <div id="lottie-animation3" class="lottie-container"></div>
-        <div class="sub-title">Full Ownership</div>
-        <p class="text-background">Enjoy complete ownership of your website's source code and design.</p>
-    </div>
-    <div class="overview-grid-cell">
-        <div id="lottie-animation2" class="lottie-container"></div>
-        <div class="sub-title">Easy-to-Use CMS</div>
-        <p class="text-background">Manage your content effortlessly with our user-friendly content management system.</p>
-    </div>
-</div>
 </section>
 <script>
     // Load the first animation
