--- a/src/_includes/snapshot.njk
+++ b/src/_includes/snapshot.njk
@@ -1,28 +1,29 @@
- 
- <div class="overview">
- <section class="header-snapshot">
-        <h1>If you can think it, <br> I can build it.</h1>
+<section class="snapshot">
+    <div class="content-background">
+        <div class="section-title">
+            <h1>If you can think it,
+                <br>
+                    I can build it.</h1>
+            </div>
+            <div class="grid-three-col">
+                <div class="service-box">
+                    <h2>New Sites.</h2>
+                    <p class="p-center">Build Webflow pages or sites from your designs on Figma and more.</p>
+                </div>
+                <div class="service-box">
+                    <h2>Convert.</h2>
+                    <p class="p-center">Get your existing site on Webflow. Go from Static to Dynamic.</p>
+                </div>
+                <div class="service-box">
+                    <h2>Emulate.</h2>
+                    <p class="p-center">Get that template you like built in Webflow.</p>
+                </div>
+            </div>
+            <div class="revisions-section">
+                <div class="revisions-banner">
+                    <h2>Unlimited Revisions</h2>
+                    <p>Get exactly what you want, not close enough.</p>
+                </div>
+            </div>
+        </div>
     </section>
-
-    <div class="services-snapshot">
-        <div class="service-box">
-            <h2>New Sites.</h2>
-            <p class="p-center">Build Webflow pages or sites from your designs on Figma and more.</p>
-        </div>
-        <div class="service-box">
-            <h2>Convert.</h2>
-            <p class="p-center">Get your existing site on Webflow. Go from Static to Dynamic.</p>
-        </div>
-        <div class="service-box">
-            <h2>Emulate.</h2>
-            <p class="p-center">Get that template you like built in Webflow.</p>
-        </div>
-    </div>
-
-    <section class="revisions-section">
-        <div class="revisions-banner">
-            <h2>Unlimited Revisions</h2>
-            <p>Get exactly what you want, not close enough.</p>
-        </div>
-    </section>
-    </div>
