--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home Page</title>
+        <title>Website By Curtis</title>
         <link rel="stylesheet" href="/style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.9.4/lottie.min.js"></script>
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/assets/coffee-cup.svg" type="image/x-icon">
     </head>
     <body>
         <div class="page">
