--- a/src/_includes/navbar.njk
+++ b/src/_includes/navbar.njk
@@ -2,7 +2,7 @@
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#overview">Overview</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="#benefits">Benefits</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
         <div class="hamburger">
