--- a/src/_includes/features.njk
+++ b/src/_includes/features.njk
@@ -1,5 +1,5 @@
 <section class="features-section">
-    <div class="overview">
+    <div class="content-background">
         <div class="section-title">
             <h2>Features</h2>
         </div>
