--- a/src/_includes/pricing.njk
+++ b/src/_includes/pricing.njk
@@ -1,5 +1,6 @@
 <section class="price-section">
-    <div class="overview">
+    <div class="content-background">
+        <div class="section-title"><h2>Pricing</h2></div>
     <div class="price-grid">
         <div class="package-cell">
             <div class="price-title">Classic Website Package</div>
