--- a/src/_includes/how-it-works.njk
+++ b/src/_includes/how-it-works.njk
@@ -1,5 +1,5 @@
 <section class="how-it-works-section">
-    <div class="overview">
+    <div class="content-background">
         <div class="section-title">
     <h2>How it works</h2>
     </div>
