--- a/src/_includes/philosophy.njk
+++ b/src/_includes/philosophy.njk
@@ -1,5 +1,5 @@
 <section class="service-philosophy">
-    <div class="content-container">
+    <div class="content-background">
         <div class="section-title">
             <h2>Service Philosophy</h2>
         </div>
