--- a/src/_includes/contact.njk
+++ b/src/_includes/contact.njk
@@ -1,51 +1,47 @@
-    <section class="container">
-        <div class="overview">
-            <div class="section-title">
-        <h1>LETS DISCUSS YOUR NEXT SITE</h1>
+<section id="faqs" class="faqs">
+    <div>
+        <div class="section-title">
+            <h1>LETS DISCUSS YOUR NEXT SITE</h1>
         </div>
-
-        <div class="content">
+        <div
+            class="content">
             <!-- Contact Form -->
+            <div class="content-background">
             <div class="contact-form">
                 <h2>Contact Form</h2>
                 <form>
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name">
-                    
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email">
-                    
-                    <label for="business">Business: (optional)</label>
-                    <input type="text" id="business" name="business">
-                    
-                    <label for="whatsapp">WhatsApp Number: (optional)</label>
-                    <input type="text" id="whatsapp" name="whatsapp">
-                    
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message"></textarea>
-                    
-                    <button type="submit">SEND</button>
-                </form>
-            </div>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email">
+                            <label for="business">Business: (optional)</label>
+                            <input type="text" id="business" name="business">
+                                <label for="whatsapp">WhatsApp Number: (optional)</label>
+                                <input type="text" id="whatsapp" name="whatsapp">
+                                    <label for="message">Message:</label>
+                                    <textarea id="message" name="message"></textarea>
+                                    <button type="submit">SEND</button>
+                                </form>
+                            </div>
+                            </div>
+                            <!-- Vertical Divider -->
+                            <div class="divider"></div>
+                                                <!-- Contact Options -->
+                    <div class="contact-options">
+                        <div class="option">
+                            <h3>Prefer to email?</h3>
+                            <p>hello@consulting.com</p>
+                        </div>
+                        <div class="option">
+                            <h3>Prefer to text?</h3>
+                            <p>WhatsApp Number</p>
+                        </div>
+                        <div class="option">
+                            <h3>Prefer to call?</h3>
+                            <p>Book a Call</p>
+                        </div>
+                    </div>
+                        </div>
+                    </div>
 
-            <!-- Vertical Divider -->
-            <div class="divider"></div>
-
-            <!-- Contact Options -->
-            <div class="contact-options">
-                <div class="option">
-                    <h3>Prefer to email?</h3>
-                    <p>hello@consulting.com</p>
-                </div>
-                <div class="option">
-                    <h3>Prefer to text?</h3>
-                    <p>WhatsApp Number</p>
-                </div>
-                <div class="option">
-                    <h3>Prefer to call?</h3>
-                    <p>Book a Call</p>
-                </div>
-            </div>
-        </div>
-        </div>
-    </section>
+                </section>
