--- a/src/_includes/faqs.njk
+++ b/src/_includes/faqs.njk
@@ -1,5 +1,5 @@
 <section class="faq-section">
-    <div class="overview">
+    <div class="content-background">
         <div class="section-title">
 <h2>FAQs</h2>
 </div>
