--- a/src/_includes/navbar.njk
+++ b/src/_includes/navbar.njk
@@ -3,7 +3,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#overview">Overview</a></li>
             <li><a href="#benefits">Benefits</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#pricing">Pricing</a></li>
         </ul>
         <div class="hamburger">
             <span></span>
