--- a/src/_includes/pricing.njk
+++ b/src/_includes/pricing.njk
@@ -1,4 +1,4 @@
-<section class="price-section">
+<section id="pricing" class="price-section">
     <div class="content-background">
         <div class="section-title"><h2>Pricing</h2></div>
     <div class="price-grid">
