--- a/src/_includes/hero.njk
+++ b/src/_includes/hero.njk
@@ -1,29 +1,31 @@
 <div class="hero-container">
 <div class="hero">
-    <img class="hero-logo" src="\assets\logo.svg" alt="hero logo">
-    <div class="button-wrap">
-        <button class="yellow-btn">See Service</button>
-    </div>
-    <div class="hero-image">
-        <!--<img class="coffee-1" src="\assets\art\coffee-cup-1.png" alt="Spilling coffee cup">-->
-    </div>
+<img class="hero-logo" src="\assets\logo.svg" alt="hero logo">
+<div class="button-wrap">
+<button class="yellow-btn">See Service</button>
+</div>
+<div class="hero-image">
+<!--<img class="coffee-1" src="\assets\art\coffee-cup-1.png" alt="Spilling coffee cup">-->
+</div>
 
-    <div class="fold">
-    <div class="latest-badge">
-        <img src="/assets/latest-badge.svg" alt="latest projects badge">
-    </div>
-    <div class="fold-links">
-        <div class="two-col-grid">
-            <div class="fold-grid-cell">
-                <h2>Start the <br> Conversation:</h2>
-                <img src="/assets/whatsapp-icon.svg" alt="WhatsApp Icon">
-            </div>
-            <div class="fold-grid-cell">
-                <h2>Check out all <br>of my work:</h2>
-                <img src="/assets/dribbble-icon.svg" alt="WhatsApp Icon">
-            </div>
-        </div>
-    </div>
+<div class="fold">
+
+<div class="fold-links">
+<div class="two-col-grid">
+<div class="fold-grid-cell">
+<h2>Start the <br> Conversation:</h2>
+<img src="/assets/whatsapp-icon.svg" alt="WhatsApp Icon">
+</div>
+<div class="fold-grid-cell">
+<h2>Check out all <br>of my work:</h2>
+<img src="/assets/dribbble-icon.svg" alt="WhatsApp Icon">
+</div>
+</div>
+<div class="latest-badge">
+<img src="/assets/latest-badge.svg" alt="latest projects badge">
+<img src="/assets/coffee-cup.svg" alt="Spilling coffee cup">
+</div>
+</div>
 </div>
 </div>
 </div>
