--- a/src/_includes/hero.njk
+++ b/src/_includes/hero.njk
@@ -12,14 +12,14 @@
 
 <div class="fold-links">
 <div class="two-col-grid">
-<div class="fold-grid-cell">
+<a class="fold-grid-cell" href="#">
 <h2>Start the <br> Conversation:</h2>
 <img src="/assets/whatsapp-icon.svg" alt="WhatsApp Icon">
-</div>
-<div class="fold-grid-cell">
+</a>
+<a class="fold-grid-cell" href="#">
 <h2>Check out all <br>of my work:</h2>
 <img src="/assets/dribbble-icon.svg" alt="WhatsApp Icon">
-</div>
+</a>
 </div>
 <div class="latest-badge">
 <img src="/assets/latest-badge.svg" alt="latest projects badge">
